--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,17 +1,5 @@
-# main.yml
-# name: Test Action
-
-# on:
-#   push:
-#     branches:
-#       - main  # or any branch you want to trigger the action
-
-# jobs:
-#   test:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v3
-
-#       - name: xxfxxxxxx@ds.study.iitm.ac.in
-#         run: echo "Hello, world!"
+jobs:
+  test:
+    steps:
+      - name: 22ds3000157@ds.study.iitm.ac.in
+        run: echo "Hello, world!"
